--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,10 +22,13 @@ httpx>=0.27.0
 pyyaml>=6.0.0
 python-dotenv>=1.0.0
 
+# ----- 文件解析 -----
+beautifulsoup4>=4.12.0
+lxml>=5.3.0
+pypdf>=4.0.0
+
 # ----- 工具 (预留：爬虫/搜索) -----
 # duckduckgo-search>=8.1.1
-# beautifulsoup4>=4.12.0
-# lxml>=5.3.0
 # requests>=2.31.0
 
 # ----- 开发/测试 -----
